<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">固定资产管理</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="save">保存</string>
    <string name="add">申请</string>
    <string name="return_asset">归还</string>
    <string name="bao_ro_sunhuai_asset">报废/保修</string>
    
    <!--sign up-->
	<string name="sign_up_account_hint">注册账号(邮箱格式)</string>
	<string name="sign_up_password_hint">注册密码</string>
	<string name="sign_up_name_hint">姓名</string>
	<string name="sign_up_position_hint">职位</string>
	<string name="sign_up">注册</string>
	<string name="login">登录</string>
    
	
    <!--personal setting-->
    <string name="avatar">头像</string>
    <string name="name">名字</string>
    <string name="department">部门</string>
    <string name="sex">性别</string>
    <string name="position">职位</string>
    <string name="user_type">用户类型</string>
    <string name="change_passowrd">密码修改</string>
    <string name="change_my_info">更新个人信息</string>
    <string name="login_out">退出登录</string>
    <string name="my_assets">我的资产</string>
    
    
    <string name="id">ID：</string>
    <string name="asset_name">资产：</string>
    <string name="state">状态：</string>
    <string name="category">类别：</string>
    <string name="inuse_username">占用用户：</string>
    <string name="purchase_date">入库日期：</string>
    <string name="description">描述：</string>
    <string name="reason">理由：</string>
    <string name="process_username">请求用户：</string>
    <string name="process_state">请求类型：</string>
    <string name="process_send">发送</string>
    
    <string name="update_name">请输入你的名字</string>
    <string name="update_department">请输入你的部门</string>
    <string name="update_position">请输入你的职位</string>
    <string name="update_sex">请选择你的性别</string>
    <string name="old_password">旧密码</string>
    <string name="new_password">新密码</string>
    <string name="update_old_passowrd">请输入旧密码</string>
    <string name="update_new_passowrd">请输入新密码</string>
    
    <string name="hint_search_info">请输入搜索资产名称，空则搜大类</string>
    <string name="search">搜索</string>
    <string name="comment">留言</string>
    <string name="no_result">没有找到对应结果!如有需要请留言给管理员.</string>
    <string name="needs_comment_hint">请留下你的意见和需求，我们回尽快处理。</string>
    <string name="needs_asset_hint">请填写需求资源：</string>
    <string name="search_page_hint">请选择条件：</string>
    
    <string-array name="spinner_department">
    	<item>总经理办公室</item>    
    	<item>IT部</item>    
    	<item>人事部</item>    
    	<item>财务部</item>    
    	<item>生产部</item>    
    	<item>营销部</item>    
    </string-array>
    
    <string-array name="spinner_sex">
    	<item>男</item>    
    	<item>女</item>    
    </string-array>
    
    <string-array name="spinner_category">
    	<item>电器</item>    
    	<item>家具</item>    
    	<item>杂物</item>    
    	<item>车辆</item>    
    	<item>房屋</item>    
    	<item>文具</item>    
    </string-array>

</resources>