<?xml version="1.0"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
	    xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent">
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="@color/white" >
	
	    <LinearLayout
	        android:id="@+id/ll_sign_input"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="20dip"
	        android:orientation="vertical" >
	
	        <EditText
	            android:id="@+id/et_email"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:focusable="true"
	            android:hint="@string/sign_up_account_hint"
	            android:inputType="textEmailAddress" />
	
	        <EditText
	            android:id="@+id/et_password"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:hint="@string/sign_up_password_hint"
	            android:inputType="textPassword" />
	
	        <EditText
	            android:id="@+id/et_name"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:hint="@string/sign_up_name_hint"
	           />
	        <EditText
	            android:id="@+id/et_position"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:hint="@string/sign_up_position_hint"
	           />
	
	        <Spinner
	            android:id="@+id/sp_department"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:entries="@array/spinner_department" />
	
	        <Spinner
	            android:id="@+id/sp_sex"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:entries="@array/spinner_sex" />
	    </LinearLayout>
	
	    <ImageView
	        android:id="@+id/iv_join_now"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/ll_sign_input"
	        android:layout_centerHorizontal="true"
	        android:src="@drawable/sign_up_btn" />
	
	</RelativeLayout>
</ScrollView>