<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="15dp" >

    <LinearLayout
        android:id="@+id/back"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:background="#eee"
        android:orientation="horizontal"
        android:tag="back" >

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/back_operationview"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/back_other"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@color/delete_btn_color"
                android:text="@string/bao_ro_sunhuai_asset"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/back_delete"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@color/other_btn_color"
                android:text="@string/return_asset"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/front"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:tag="front" >

        <TextView
            android:id="@+id/tv_asset_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="name" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_selector"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="20dip" >
			
            <LinearLayout
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal">
            	 <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/state"
	                android:textColor="@color/c_def_line_color" />
            
	            <TextView
	                android:id="@+id/tv_asset_state"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                />
			</LinearLayout>
            <LinearLayout
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal">
            	
                 <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:textColor="@color/c_def_line_color"
	                android:text="@string/description" />
                
	            <TextView
	                android:id="@+id/tv_asset_description"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:singleLine="true"
	                 />
	        </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/view_more_line"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_gravity="bottom"
        android:background="@color/c_def_line_color" />

</FrameLayout>